[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/Pixel Adventure 1/Free/Main Characters/Pink Man/Idle (32x32).png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 6.0

[sub_resource type="CircleShape2D" id=2]
radius = 1.0

[sub_resource type="CapsuleShape2D" id=3]
height = 4.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7, 1 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Idle(32X32)" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="CollisionLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionLeft"]
position = Vector2( -16, 20 )
shape = SubResource( 2 )

[node name="CollisionRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionRight"]
position = Vector2( 16, 20 )
shape = SubResource( 2 )

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( 0, 4 )
shape = SubResource( 3 )

[node name="TakeControl" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TakeControl"]
position = Vector2( 0, -8 )
shape = SubResource( 4 )

[node name="LeftWall" type="RayCast2D" parent="."]
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 20 )

[node name="RightWall" type="RayCast2D" parent="."]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 20 )

[connection signal="body_entered" from="CollisionLeft" to="." method="_on_CollisionLeft_body_entered"]
[connection signal="body_exited" from="CollisionLeft" to="." method="_on_CollisionLeft_body_exited"]
[connection signal="body_entered" from="CollisionRight" to="." method="_on_CollisionRight_body_entered"]
[connection signal="body_exited" from="CollisionRight" to="." method="_on_CollisionRight_body_exited"]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="body_entered" from="TakeControl" to="." method="_on_TakeControl_body_entered"]
[connection signal="body_entered" from="TakeControl" to="." method="_on_Area2D_body_entered"]
